cmake_minimum_required(VERSION 3.5)
project(bind_9_2_3)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c11")

set(SOURCE_FILES
    bin/check/check-tool.c
    bin/check/check-tool.h
    bin/check/named-checkconf.c
    bin/check/named-checkzone.c
    bin/dig/include/dig/dig.h
    bin/dig/include/dig/myDig.c
    bin/dig/dig.c
    bin/dig/dighost.c
    bin/dig/host.c
    bin/dig/myDig.c
    bin/dig/myDig.h
    bin/dig/nslookup.c
    bin/dnssec/dnssec-keygen.c
    bin/dnssec/dnssec-makekeyset.c
    bin/dnssec/dnssec-signkey.c
    bin/dnssec/dnssec-signzone.c
    bin/dnssec/dnssectool.c
    bin/dnssec/dnssectool.h
    bin/named/include/named/aclconf.h
    bin/named/include/named/client.h
    bin/named/include/named/config.h
    bin/named/include/named/control.h
    bin/named/include/named/globals.h
    bin/named/include/named/interfacemgr.h
    bin/named/include/named/listenlist.h
    bin/named/include/named/log.h
    bin/named/include/named/logconf.h
    bin/named/include/named/lwaddr.h
    bin/named/include/named/lwdclient.h
    bin/named/include/named/lwresd.h
    bin/named/include/named/lwsearch.h
    bin/named/include/named/main.h
    bin/named/include/named/notify.h
    bin/named/include/named/query.h
    bin/named/include/named/server.h
    bin/named/include/named/sortlist.h
    bin/named/include/named/tkeyconf.h
    bin/named/include/named/tsigconf.h
    bin/named/include/named/types.h
    bin/named/include/named/update.h
    bin/named/include/named/xfrout.h
    bin/named/include/named/zoneconf.h
    bin/named/unix/include/named/os.h
    bin/named/unix/os.c
    bin/named/win32/include/named/ntservice.h
    bin/named/win32/include/named/os.h
    bin/named/win32/ntservice.c
    bin/named/win32/os.c
    bin/named/aclconf.c
    bin/named/client.c
    bin/named/config.c
    bin/named/control.c
    bin/named/controlconf.c
    bin/named/interfacemgr.c
    bin/named/listenlist.c
    bin/named/log.c
    bin/named/logconf.c
    bin/named/lwaddr.c
    bin/named/lwdclient.c
    bin/named/lwderror.c
    bin/named/lwdgabn.c
    bin/named/lwdgnba.c
    bin/named/lwdgrbn.c
    bin/named/lwdnoop.c
    bin/named/lwresd.c
    bin/named/lwsearch.c
    bin/named/main.c
    bin/named/notify.c
    bin/named/query.c
    bin/named/server.c
    bin/named/sortlist.c
    bin/named/tkeyconf.c
    bin/named/tsigconf.c
    bin/named/update.c
    bin/named/xfrout.c
    bin/named/zoneconf.c
    bin/nsupdate/nsupdate.c
    bin/rndc/include/rndc/os.h
    bin/rndc/unix/os.c
    bin/rndc/win32/os.c
    bin/rndc/rndc-confgen.c
    bin/rndc/rndc.c
    bin/rndc/util.c
    bin/rndc/util.h
    bin/tests/db/t_db.c
    bin/tests/dst/dst_test.c
    bin/tests/dst/t_dst.c
    bin/tests/master/t_master.c
    bin/tests/mem/t_mem.c
    bin/tests/names/t_names.c
    bin/tests/net/driver.c
    bin/tests/net/driver.h
    bin/tests/net/netaddr_multicast.c
    bin/tests/net/sockaddr_multicast.c
    bin/tests/net/testsuite.h
    bin/tests/rbt/t_rbt.c
    bin/tests/sockaddr/t_sockaddr.c
    bin/tests/system/lwresd/lwtest.c
    bin/tests/system/tkey/keycreate.c
    bin/tests/system/tkey/keydelete.c
    bin/tests/tasks/t_tasks.c
    bin/tests/timers/t_timers.c
    bin/tests/adb_test.c
    bin/tests/byaddr_test.c
    bin/tests/byname_test.c
    bin/tests/cfg_test.c
    bin/tests/compress_test.c
    bin/tests/db_test.c
    bin/tests/entropy2_test.c
    bin/tests/entropy_test.c
    bin/tests/fsaccess_test.c
    bin/tests/genrandom.c
    bin/tests/gxba_test.c
    bin/tests/gxbn_test.c
    bin/tests/hash_test.c
    bin/tests/inter_test.c
    bin/tests/journalprint.c
    bin/tests/keyboard_test.c
    bin/tests/lex_test.c
    bin/tests/lfsr_test.c
    bin/tests/log_test.c
    bin/tests/lwres_test.c
    bin/tests/lwresconf_test.c
    bin/tests/master_test.c
    bin/tests/mempool_test.c
    bin/tests/name_test.c
    bin/tests/nxtify.c
    bin/tests/printmsg.c
    bin/tests/printmsg.h
    bin/tests/ratelimiter_test.c
    bin/tests/rbt_test.c
    bin/tests/rdata_test.c
    bin/tests/rwlock_test.c
    bin/tests/serial_test.c
    bin/tests/shutdown_test.c
    bin/tests/sig0_test.c
    bin/tests/sock_test.c
    bin/tests/sym_test.c
    bin/tests/task_test.c
    bin/tests/timer_test.c
    bin/tests/wire_test.c
    bin/tests/zone_test.c
    bin/win32/BINDInstall/BINDInstall.cpp
    bin/win32/BINDInstall/BINDInstall.h
    bin/win32/BINDInstall/BINDInstallDlg.cpp
    bin/win32/BINDInstall/BINDInstallDlg.h
    bin/win32/BINDInstall/DirBrowse.cpp
    bin/win32/BINDInstall/DirBrowse.h
    bin/win32/BINDInstall/resource.h
    bin/win32/BINDInstall/StdAfx.cpp
    bin/win32/BINDInstall/StdAfx.h
    bin/win32/BINDInstall/VersionInfo.cpp
    bin/win32/BINDInstall/VersionInfo.h
    contrib/idn/idnkit-1.0-src/include/idn/aliaslist.h
    contrib/idn/idnkit-1.0-src/include/idn/api.h
    contrib/idn/idnkit-1.0-src/include/idn/assert.h
    contrib/idn/idnkit-1.0-src/include/idn/checker.h
    contrib/idn/idnkit-1.0-src/include/idn/converter.h
    contrib/idn/idnkit-1.0-src/include/idn/debug.h
    contrib/idn/idnkit-1.0-src/include/idn/delimitermap.h
    contrib/idn/idnkit-1.0-src/include/idn/export.h
    contrib/idn/idnkit-1.0-src/include/idn/filechecker.h
    contrib/idn/idnkit-1.0-src/include/idn/filemapper.h
    contrib/idn/idnkit-1.0-src/include/idn/localencoding.h
    contrib/idn/idnkit-1.0-src/include/idn/log.h
    contrib/idn/idnkit-1.0-src/include/idn/logmacro.h
    contrib/idn/idnkit-1.0-src/include/idn/mapper.h
    contrib/idn/idnkit-1.0-src/include/idn/mapselector.h
    contrib/idn/idnkit-1.0-src/include/idn/nameprep.h
    contrib/idn/idnkit-1.0-src/include/idn/normalizer.h
    contrib/idn/idnkit-1.0-src/include/idn/punycode.h
    contrib/idn/idnkit-1.0-src/include/idn/race.h
    contrib/idn/idnkit-1.0-src/include/idn/res.h
    contrib/idn/idnkit-1.0-src/include/idn/resconf.h
    contrib/idn/idnkit-1.0-src/include/idn/result.h
    contrib/idn/idnkit-1.0-src/include/idn/strhash.h
    contrib/idn/idnkit-1.0-src/include/idn/ucs4.h
    contrib/idn/idnkit-1.0-src/include/idn/ucsmap.h
    contrib/idn/idnkit-1.0-src/include/idn/ucsset.h
    contrib/idn/idnkit-1.0-src/include/idn/unicode.h
    contrib/idn/idnkit-1.0-src/include/idn/unormalize.h
    contrib/idn/idnkit-1.0-src/include/idn/utf8.h
    contrib/idn/idnkit-1.0-src/include/idn/util.h
    contrib/idn/idnkit-1.0-src/include/idn/version.h
    contrib/idn/idnkit-1.0-src/include/mdn/api.h
    contrib/idn/idnkit-1.0-src/include/mdn/localencoding.h
    contrib/idn/idnkit-1.0-src/include/mdn/log.h
    contrib/idn/idnkit-1.0-src/include/mdn/res.h
    contrib/idn/idnkit-1.0-src/include/mdn/resconf.h
    contrib/idn/idnkit-1.0-src/include/mdn/result.h
    contrib/idn/idnkit-1.0-src/include/mdn/utf8.h
    contrib/idn/idnkit-1.0-src/include/mdn/version.h
    contrib/idn/idnkit-1.0-src/lib/tests/codeset.h
    contrib/idn/idnkit-1.0-src/lib/tests/iconvchk.c
    contrib/idn/idnkit-1.0-src/lib/tests/setenv.c
    contrib/idn/idnkit-1.0-src/lib/tests/setenv.h
    contrib/idn/idnkit-1.0-src/lib/tests/testsuite.c
    contrib/idn/idnkit-1.0-src/lib/tests/testsuite.h
    contrib/idn/idnkit-1.0-src/lib/tests/testutil.c
    contrib/idn/idnkit-1.0-src/lib/tests/testutil.h
    contrib/idn/idnkit-1.0-src/lib/aliaslist.c
    contrib/idn/idnkit-1.0-src/lib/api.c
    contrib/idn/idnkit-1.0-src/lib/checker.c
    contrib/idn/idnkit-1.0-src/lib/converter.c
    contrib/idn/idnkit-1.0-src/lib/debug.c
    contrib/idn/idnkit-1.0-src/lib/delimitermap.c
    contrib/idn/idnkit-1.0-src/lib/filechecker.c
    contrib/idn/idnkit-1.0-src/lib/filemapper.c
    contrib/idn/idnkit-1.0-src/lib/localencoding.c
    contrib/idn/idnkit-1.0-src/lib/log.c
    contrib/idn/idnkit-1.0-src/lib/mapper.c
    contrib/idn/idnkit-1.0-src/lib/mapselector.c
    contrib/idn/idnkit-1.0-src/lib/nameprep.c
    contrib/idn/idnkit-1.0-src/lib/nameprep_template.c
    contrib/idn/idnkit-1.0-src/lib/nameprepdata.c
    contrib/idn/idnkit-1.0-src/lib/normalizer.c
    contrib/idn/idnkit-1.0-src/lib/punycode.c
    contrib/idn/idnkit-1.0-src/lib/race.c
    contrib/idn/idnkit-1.0-src/lib/res.c
    contrib/idn/idnkit-1.0-src/lib/resconf.c
    contrib/idn/idnkit-1.0-src/lib/result.c
    contrib/idn/idnkit-1.0-src/lib/strhash.c
    contrib/idn/idnkit-1.0-src/lib/ucs4.c
    contrib/idn/idnkit-1.0-src/lib/ucsmap.c
    contrib/idn/idnkit-1.0-src/lib/ucsset.c
    contrib/idn/idnkit-1.0-src/lib/unicode.c
    contrib/idn/idnkit-1.0-src/lib/unicode_template.c
    contrib/idn/idnkit-1.0-src/lib/unicodedata_320.c
    contrib/idn/idnkit-1.0-src/lib/unormalize.c
    contrib/idn/idnkit-1.0-src/lib/utf8.c
    contrib/idn/idnkit-1.0-src/lib/util.c
    contrib/idn/idnkit-1.0-src/lib/version.c
    contrib/idn/idnkit-1.0-src/tools/idnconv/idnconv.c
    contrib/idn/idnkit-1.0-src/tools/idnconv/selectiveencode.c
    contrib/idn/idnkit-1.0-src/tools/idnconv/selectiveencode.h
    contrib/idn/idnkit-1.0-src/tools/idnconv/util.c
    contrib/idn/idnkit-1.0-src/tools/idnconv/util.h
    contrib/idn/idnkit-1.0-src/tools/runidn/resolver.c
    contrib/idn/idnkit-1.0-src/tools/runidn/resolver.h
    contrib/idn/idnkit-1.0-src/tools/runidn/stub.c
    contrib/idn/idnkit-1.0-src/tools/runidn/stub.h
    contrib/idn/idnkit-1.0-src/wsock/common/checkdll.c
    contrib/idn/idnkit-1.0-src/wsock/common/convert.c
    contrib/idn/idnkit-1.0-src/wsock/common/dump.c
    contrib/idn/idnkit-1.0-src/wsock/common/encoding.c
    contrib/idn/idnkit-1.0-src/wsock/common/hook.c
    contrib/idn/idnkit-1.0-src/wsock/common/printf.c
    contrib/idn/idnkit-1.0-src/wsock/common/wrapcommon.h
    contrib/idn/idnkit-1.0-src/wsock/wsock11/dlldef.h
    contrib/idn/idnkit-1.0-src/wsock/wsock11/dllfunc.c
    contrib/idn/idnkit-1.0-src/wsock/wsock11/dllload.c
    contrib/idn/idnkit-1.0-src/wsock/wsock11/dllmain.c
    contrib/idn/idnkit-1.0-src/wsock/wsock11/dllstub.c
    contrib/idn/idnkit-1.0-src/wsock/wsock20/dlldef.h
    contrib/idn/idnkit-1.0-src/wsock/wsock20/dllfunc.c
    contrib/idn/idnkit-1.0-src/wsock/wsock20/dllload.c
    contrib/idn/idnkit-1.0-src/wsock/wsock20/dllmain.c
    contrib/idn/idnkit-1.0-src/wsock/wsock20/dllstub.c
    contrib/idn/idnkit-1.0-src/acconfig.h
    contrib/nslint-2.1a3/lbl/gnuc.h
    contrib/nslint-2.1a3/lbl/os-irix5.h
    contrib/nslint-2.1a3/lbl/os-osf3.h
    contrib/nslint-2.1a3/lbl/os-solaris2.h
    contrib/nslint-2.1a3/lbl/os-sunos4.h
    contrib/nslint-2.1a3/lbl/os-ultrix4.h
    contrib/nslint-2.1a3/nslint.c
    contrib/nslint-2.1a3/savestr.c
    contrib/nslint-2.1a3/savestr.h
    contrib/nslint-2.1a3/strerror.c
    contrib/queryperf/queryperf.c
    contrib/sdb/bdb/bdb.c
    contrib/sdb/bdb/bdb.h
    contrib/sdb/bdb/zone2bdb.c
    contrib/sdb/dir/dirdb.c
    contrib/sdb/dir/dirdb.h
    contrib/sdb/ldap/ldapdb.c
    contrib/sdb/ldap/ldapdb.h
    contrib/sdb/ldap/zone2ldap.c
    contrib/sdb/pgsql/pgsqldb.c
    contrib/sdb/pgsql/pgsqldb.h
    contrib/sdb/pgsql/zonetodb.c
    contrib/sdb/tcl/tcldb.c
    contrib/sdb/tcl/tcldb.h
    contrib/sdb/time/timedb.c
    contrib/sdb/time/timedb.h
    lib/bind/bsd/daemon.c
    lib/bind/bsd/ftruncate.c
    lib/bind/bsd/gettimeofday.c
    lib/bind/bsd/mktemp.c
    lib/bind/bsd/putenv.c
    lib/bind/bsd/readv.c
    lib/bind/bsd/setenv.c
    lib/bind/bsd/setitimer.c
    lib/bind/bsd/strcasecmp.c
    lib/bind/bsd/strdup.c
    lib/bind/bsd/strerror.c
    lib/bind/bsd/strpbrk.c
    lib/bind/bsd/strsep.c
    lib/bind/bsd/strtoul.c
    lib/bind/bsd/utimes.c
    lib/bind/bsd/writev.c
    lib/bind/dst/dst_api.c
    lib/bind/dst/dst_internal.h
    lib/bind/dst/hmac_link.c
    lib/bind/dst/md5.h
    lib/bind/dst/md5_dgst.c
    lib/bind/dst/md5_locl.h
    lib/bind/dst/support.c
    lib/bind/include/arpa/inet.h
    lib/bind/include/arpa/nameser.h
    lib/bind/include/arpa/nameser_compat.h
    lib/bind/include/isc/assertions.h
    lib/bind/include/isc/ctl.h
    lib/bind/include/isc/dst.h
    lib/bind/include/isc/eventlib.h
    lib/bind/include/isc/heap.h
    lib/bind/include/isc/irpmarshall.h
    lib/bind/include/isc/list.h
    lib/bind/include/isc/logging.h
    lib/bind/include/isc/memcluster.h
    lib/bind/include/isc/misc.h
    lib/bind/include/isc/tree.h
    lib/bind/include/fd_setsize.h
    lib/bind/include/hesiod.h
    lib/bind/include/irp.h
    lib/bind/include/irs.h
    lib/bind/include/netdb.h
    lib/bind/include/netgroup.h
    lib/bind/include/res_update.h
    lib/bind/include/resolv.h
    lib/bind/inet/inet_addr.c
    lib/bind/inet/inet_cidr_ntop.c
    lib/bind/inet/inet_cidr_pton.c
    lib/bind/inet/inet_data.c
    lib/bind/inet/inet_lnaof.c
    lib/bind/inet/inet_makeaddr.c
    lib/bind/inet/inet_net_ntop.c
    lib/bind/inet/inet_net_pton.c
    lib/bind/inet/inet_neta.c
    lib/bind/inet/inet_netof.c
    lib/bind/inet/inet_network.c
    lib/bind/inet/inet_ntoa.c
    lib/bind/inet/inet_ntop.c
    lib/bind/inet/inet_pton.c
    lib/bind/inet/nsap_addr.c
    lib/bind/irs/dns.c
    lib/bind/irs/dns_gr.c
    lib/bind/irs/dns_ho.c
    lib/bind/irs/dns_nw.c
    lib/bind/irs/dns_p.h
    lib/bind/irs/dns_pr.c
    lib/bind/irs/dns_pw.c
    lib/bind/irs/dns_sv.c
    lib/bind/irs/gai_strerror.c
    lib/bind/irs/gen.c
    lib/bind/irs/gen_gr.c
    lib/bind/irs/gen_ho.c
    lib/bind/irs/gen_ng.c
    lib/bind/irs/gen_nw.c
    lib/bind/irs/gen_p.h
    lib/bind/irs/gen_pr.c
    lib/bind/irs/gen_pw.c
    lib/bind/irs/gen_sv.c
    lib/bind/irs/getaddrinfo.c
    lib/bind/irs/getgrent.c
    lib/bind/irs/getgrent_r.c
    lib/bind/irs/gethostent.c
    lib/bind/irs/gethostent_r.c
    lib/bind/irs/getnameinfo.c
    lib/bind/irs/getnetent.c
    lib/bind/irs/getnetent_r.c
    lib/bind/irs/getnetgrent.c
    lib/bind/irs/getnetgrent_r.c
    lib/bind/irs/getprotoent.c
    lib/bind/irs/getprotoent_r.c
    lib/bind/irs/getpwent.c
    lib/bind/irs/getpwent_r.c
    lib/bind/irs/getservent.c
    lib/bind/irs/getservent_r.c
    lib/bind/irs/hesiod.c
    lib/bind/irs/hesiod_p.h
    lib/bind/irs/irp.c
    lib/bind/irs/irp_gr.c
    lib/bind/irs/irp_ho.c
    lib/bind/irs/irp_ng.c
    lib/bind/irs/irp_nw.c
    lib/bind/irs/irp_p.h
    lib/bind/irs/irp_pr.c
    lib/bind/irs/irp_pw.c
    lib/bind/irs/irp_sv.c
    lib/bind/irs/irpmarshall.c
    lib/bind/irs/irs_data.c
    lib/bind/irs/irs_data.h
    lib/bind/irs/irs_p.h
    lib/bind/irs/lcl.c
    lib/bind/irs/lcl_gr.c
    lib/bind/irs/lcl_ho.c
    lib/bind/irs/lcl_ng.c
    lib/bind/irs/lcl_nw.c
    lib/bind/irs/lcl_p.h
    lib/bind/irs/lcl_pr.c
    lib/bind/irs/lcl_pw.c
    lib/bind/irs/lcl_sv.c
    lib/bind/irs/nis.c
    lib/bind/irs/nis_gr.c
    lib/bind/irs/nis_ho.c
    lib/bind/irs/nis_ng.c
    lib/bind/irs/nis_nw.c
    lib/bind/irs/nis_p.h
    lib/bind/irs/nis_pr.c
    lib/bind/irs/nis_pw.c
    lib/bind/irs/nis_sv.c
    lib/bind/irs/nul_ng.c
    lib/bind/irs/pathnames.h
    lib/bind/irs/util.c
    lib/bind/isc/assertions.c
    lib/bind/isc/base64.c
    lib/bind/isc/bitncmp.c
    lib/bind/isc/ctl_clnt.c
    lib/bind/isc/ctl_p.c
    lib/bind/isc/ctl_p.h
    lib/bind/isc/ctl_srvr.c
    lib/bind/isc/ev_connects.c
    lib/bind/isc/ev_files.c
    lib/bind/isc/ev_streams.c
    lib/bind/isc/ev_timers.c
    lib/bind/isc/ev_waits.c
    lib/bind/isc/eventlib.c
    lib/bind/isc/eventlib_p.h
    lib/bind/isc/heap.c
    lib/bind/isc/hex.c
    lib/bind/isc/logging.c
    lib/bind/isc/logging_p.h
    lib/bind/isc/memcluster.c
    lib/bind/isc/movefile.c
    lib/bind/isc/tree.c
    lib/bind/nameser/ns_date.c
    lib/bind/nameser/ns_name.c
    lib/bind/nameser/ns_netint.c
    lib/bind/nameser/ns_parse.c
    lib/bind/nameser/ns_print.c
    lib/bind/nameser/ns_samedomain.c
    lib/bind/nameser/ns_sign.c
    lib/bind/nameser/ns_ttl.c
    lib/bind/nameser/ns_verify.c
    lib/bind/port/aix32/include/sys/bitypes.h
    lib/bind/port/aix32/include/sys/cdefs.h
    lib/bind/port/aix32/include/paths.h
    lib/bind/port/aix4/include/sys/bitypes.h
    lib/bind/port/aix4/include/sys/cdefs.h
    lib/bind/port/aux3/include/sys/bitypes.h
    lib/bind/port/aux3/include/sys/cdefs.h
    lib/bind/port/bsdos/include/sys/bitypes.h
    lib/bind/port/bsdos2/include/sys/bitypes.h
    lib/bind/port/darwin/include/sys/bitypes.h
    lib/bind/port/decunix/include/sys/bitypes.h
    lib/bind/port/decunix/include/sys/cdefs.h
    lib/bind/port/freebsd/include/sys/bitypes.h
    lib/bind/port/hpux/include/sys/bitypes.h
    lib/bind/port/hpux/include/sys/cdefs.h
    lib/bind/port/hpux/include/paths.h
    lib/bind/port/hpux10/include/sys/bitypes.h
    lib/bind/port/hpux10/include/sys/cdefs.h
    lib/bind/port/hpux10/include/paths.h
    lib/bind/port/hpux9/include/sys/bitypes.h
    lib/bind/port/hpux9/include/sys/cdefs.h
    lib/bind/port/irix/include/sys/bitypes.h
    lib/bind/port/irix/include/sys/cdefs.h
    lib/bind/port/irix/include/paths.h
    lib/bind/port/linux/include/net/route.h
    lib/bind/port/linux/include/sys/mbuf.h
    lib/bind/port/lynxos/include/sys/bitypes.h
    lib/bind/port/lynxos/include/sys/cdefs.h
    lib/bind/port/mpe/include/net/route.h
    lib/bind/port/mpe/include/sys/bitypes.h
    lib/bind/port/mpe/include/sys/cdefs.h
    lib/bind/port/mpe/include/sys/file.h
    lib/bind/port/mpe/include/sys/mbuf.h
    lib/bind/port/mpe/include/sys/param.h
    lib/bind/port/mpe/include/sys/time.h
    lib/bind/port/netbsd/include/sys/bitypes.h
    lib/bind/port/next/include/sys/bitypes.h
    lib/bind/port/next/include/sys/cdefs.h
    lib/bind/port/openbsd/include/sys/bitypes.h
    lib/bind/port/qnx/include/sys/bitypes.h
    lib/bind/port/qnx/include/sys/cdefs.h
    lib/bind/port/qnx/include/sys/ioctl.h
    lib/bind/port/qnx/include/sys/mbuf.h
    lib/bind/port/qnx/include/sys/resource.h
    lib/bind/port/rhapsody/include/sys/bitypes.h
    lib/bind/port/sco42/include/sys/bitypes.h
    lib/bind/port/sco42/include/sys/cdefs.h
    lib/bind/port/sco42/include/sys/mbuf.h
    lib/bind/port/sco42/include/sys/un.h
    lib/bind/port/sco50/include/sys/mbuf.h
    lib/bind/port/solaris/include/sys/bitypes.h
    lib/bind/port/solaris/include/sys/cdefs.h
    lib/bind/port/solaris/include/paths.h
    lib/bind/port/sunos/include/sys/bitypes.h
    lib/bind/port/sunos/include/sys/cdefs.h
    lib/bind/port/sunos/include/sys/wait.h
    lib/bind/port/ultrix/include/rpc/xdr.h
    lib/bind/port/ultrix/include/sys/bitypes.h
    lib/bind/port/ultrix/include/sys/cdefs.h
    lib/bind/port/ultrix/include/sys/socket.h
    lib/bind/port/ultrix/include/sys/syslog.h
    lib/bind/port/unixware20/include/sys/bitypes.h
    lib/bind/port/unixware20/include/sys/cdefs.h
    lib/bind/port/unixware212/include/sys/bitypes.h
    lib/bind/port/unixware212/include/sys/cdefs.h
    lib/bind/resolv/herror.c
    lib/bind/resolv/res_comp.c
    lib/bind/resolv/res_data.c
    lib/bind/resolv/res_debug.c
    lib/bind/resolv/res_debug.h
    lib/bind/resolv/res_findzonecut.c
    lib/bind/resolv/res_init.c
    lib/bind/resolv/res_mkquery.c
    lib/bind/resolv/res_mkupdate.c
    lib/bind/resolv/res_mkupdate.h
    lib/bind/resolv/res_private.h
    lib/bind/resolv/res_query.c
    lib/bind/resolv/res_send.c
    lib/bind/resolv/res_sendsigned.c
    lib/bind/resolv/res_update.c
    lib/bind/config.h
    lib/bind/port_after.h
    lib/bind/port_before.h
    lib/dns/include/dns/a6.h
    lib/dns/include/dns/acl.h
    lib/dns/include/dns/adb.h
    lib/dns/include/dns/bit.h
    lib/dns/include/dns/byaddr.h
    lib/dns/include/dns/cache.h
    lib/dns/include/dns/callbacks.h
    lib/dns/include/dns/cert.h
    lib/dns/include/dns/compress.h
    lib/dns/include/dns/db.h
    lib/dns/include/dns/dbiterator.h
    lib/dns/include/dns/dbtable.h
    lib/dns/include/dns/diff.h
    lib/dns/include/dns/dispatch.h
    lib/dns/include/dns/dnssec.h
    lib/dns/include/dns/enumclass.h
    lib/dns/include/dns/enumtype.h
    lib/dns/include/dns/events.h
    lib/dns/include/dns/fixedname.h
    lib/dns/include/dns/forward.h
    lib/dns/include/dns/journal.h
    lib/dns/include/dns/keyflags.h
    lib/dns/include/dns/keytable.h
    lib/dns/include/dns/keyvalues.h
    lib/dns/include/dns/lib.h
    lib/dns/include/dns/log.h
    lib/dns/include/dns/lookup.h
    lib/dns/include/dns/master.h
    lib/dns/include/dns/masterdump.h
    lib/dns/include/dns/message.h
    lib/dns/include/dns/name.h
    lib/dns/include/dns/ncache.h
    lib/dns/include/dns/nxt.h
    lib/dns/include/dns/peer.h
    lib/dns/include/dns/rbt.h
    lib/dns/include/dns/rcode.h
    lib/dns/include/dns/rdata.h
    lib/dns/include/dns/rdataclass.h
    lib/dns/include/dns/rdatalist.h
    lib/dns/include/dns/rdataset.h
    lib/dns/include/dns/rdatasetiter.h
    lib/dns/include/dns/rdataslab.h
    lib/dns/include/dns/rdatastruct.h
    lib/dns/include/dns/rdatatype.h
    lib/dns/include/dns/request.h
    lib/dns/include/dns/resolver.h
    lib/dns/include/dns/result.h
    lib/dns/include/dns/rootns.h
    lib/dns/include/dns/sdb.h
    lib/dns/include/dns/secalg.h
    lib/dns/include/dns/secproto.h
    lib/dns/include/dns/soa.h
    lib/dns/include/dns/ssu.h
    lib/dns/include/dns/stats.h
    lib/dns/include/dns/tcpmsg.h
    lib/dns/include/dns/time.h
    lib/dns/include/dns/timer.h
    lib/dns/include/dns/tkey.h
    lib/dns/include/dns/tsig.h
    lib/dns/include/dns/ttl.h
    lib/dns/include/dns/types.h
    lib/dns/include/dns/validator.h
    lib/dns/include/dns/view.h
    lib/dns/include/dns/xfrin.h
    lib/dns/include/dns/zone.h
    lib/dns/include/dns/zonekey.h
    lib/dns/include/dns/zt.h
    lib/dns/rdata/any_255/tsig_250.c
    lib/dns/rdata/any_255/tsig_250.h
    lib/dns/rdata/generic/afsdb_18.c
    lib/dns/rdata/generic/afsdb_18.h
    lib/dns/rdata/generic/cert_37.c
    lib/dns/rdata/generic/cert_37.h
    lib/dns/rdata/generic/cname_5.c
    lib/dns/rdata/generic/cname_5.h
    lib/dns/rdata/generic/dname_39.c
    lib/dns/rdata/generic/dname_39.h
    lib/dns/rdata/generic/gpos_27.c
    lib/dns/rdata/generic/gpos_27.h
    lib/dns/rdata/generic/hinfo_13.c
    lib/dns/rdata/generic/hinfo_13.h
    lib/dns/rdata/generic/isdn_20.c
    lib/dns/rdata/generic/isdn_20.h
    lib/dns/rdata/generic/key_25.c
    lib/dns/rdata/generic/key_25.h
    lib/dns/rdata/generic/loc_29.c
    lib/dns/rdata/generic/loc_29.h
    lib/dns/rdata/generic/mb_7.c
    lib/dns/rdata/generic/mb_7.h
    lib/dns/rdata/generic/md_3.c
    lib/dns/rdata/generic/md_3.h
    lib/dns/rdata/generic/mf_4.c
    lib/dns/rdata/generic/mf_4.h
    lib/dns/rdata/generic/mg_8.c
    lib/dns/rdata/generic/mg_8.h
    lib/dns/rdata/generic/minfo_14.c
    lib/dns/rdata/generic/minfo_14.h
    lib/dns/rdata/generic/mr_9.c
    lib/dns/rdata/generic/mr_9.h
    lib/dns/rdata/generic/mx_15.c
    lib/dns/rdata/generic/mx_15.h
    lib/dns/rdata/generic/ns_2.c
    lib/dns/rdata/generic/ns_2.h
    lib/dns/rdata/generic/null_10.c
    lib/dns/rdata/generic/null_10.h
    lib/dns/rdata/generic/nxt_30.c
    lib/dns/rdata/generic/nxt_30.h
    lib/dns/rdata/generic/opt_41.c
    lib/dns/rdata/generic/opt_41.h
    lib/dns/rdata/generic/proforma.c
    lib/dns/rdata/generic/proforma.h
    lib/dns/rdata/generic/ptr_12.c
    lib/dns/rdata/generic/ptr_12.h
    lib/dns/rdata/generic/rp_17.c
    lib/dns/rdata/generic/rp_17.h
    lib/dns/rdata/generic/rt_21.c
    lib/dns/rdata/generic/rt_21.h
    lib/dns/rdata/generic/sig_24.c
    lib/dns/rdata/generic/sig_24.h
    lib/dns/rdata/generic/soa_6.c
    lib/dns/rdata/generic/soa_6.h
    lib/dns/rdata/generic/tkey_249.c
    lib/dns/rdata/generic/tkey_249.h
    lib/dns/rdata/generic/txt_16.c
    lib/dns/rdata/generic/txt_16.h
    lib/dns/rdata/generic/unspec_103.c
    lib/dns/rdata/generic/unspec_103.h
    lib/dns/rdata/generic/x25_19.c
    lib/dns/rdata/generic/x25_19.h
    lib/dns/rdata/hs_4/a_1.c
    lib/dns/rdata/hs_4/a_1.h
    lib/dns/rdata/in_1/a6_38.c
    lib/dns/rdata/in_1/a6_38.h
    lib/dns/rdata/in_1/a_1.c
    lib/dns/rdata/in_1/a_1.h
    lib/dns/rdata/in_1/aaaa_28.c
    lib/dns/rdata/in_1/aaaa_28.h
    lib/dns/rdata/in_1/kx_36.c
    lib/dns/rdata/in_1/kx_36.h
    lib/dns/rdata/in_1/naptr_35.c
    lib/dns/rdata/in_1/naptr_35.h
    lib/dns/rdata/in_1/nsap-ptr_23.c
    lib/dns/rdata/in_1/nsap-ptr_23.h
    lib/dns/rdata/in_1/nsap_22.c
    lib/dns/rdata/in_1/nsap_22.h
    lib/dns/rdata/in_1/px_26.c
    lib/dns/rdata/in_1/px_26.h
    lib/dns/rdata/in_1/srv_33.c
    lib/dns/rdata/in_1/srv_33.h
    lib/dns/rdata/in_1/wks_11.c
    lib/dns/rdata/in_1/wks_11.h
    lib/dns/rdata/rdatastructpre.h
    lib/dns/rdata/rdatastructsuf.h
    lib/dns/sec/dst/include/dst/dst.h
    lib/dns/sec/dst/include/dst/gssapi.h
    lib/dns/sec/dst/include/dst/lib.h
    lib/dns/sec/dst/include/dst/result.h
    lib/dns/sec/dst/dst_api.c
    lib/dns/sec/dst/dst_internal.h
    lib/dns/sec/dst/dst_lib.c
    lib/dns/sec/dst/dst_parse.c
    lib/dns/sec/dst/dst_parse.h
    lib/dns/sec/dst/dst_result.c
    lib/dns/sec/dst/gssapi_link.c
    lib/dns/sec/dst/gssapictx.c
    lib/dns/sec/dst/hmac_link.c
    lib/dns/sec/dst/key.c
    lib/dns/sec/dst/openssl_link.c
    lib/dns/sec/dst/openssldh_link.c
    lib/dns/sec/dst/openssldsa_link.c
    lib/dns/sec/dst/opensslrsa_link.c
    lib/dns/win32/DLLMain.c
    lib/dns/win32/version.c
    lib/dns/a6.c
    lib/dns/acl.c
    lib/dns/adb.c
    lib/dns/byaddr.c
    lib/dns/cache.c
    lib/dns/callbacks.c
    lib/dns/code.h
    lib/dns/compress.c
    lib/dns/db.c
    lib/dns/dbiterator.c
    lib/dns/dbtable.c
    lib/dns/diff.c
    lib/dns/dispatch.c
    lib/dns/dnssec.c
    lib/dns/forward.c
    lib/dns/gen-unix.h
    lib/dns/gen-win32.h
    lib/dns/gen.c
    lib/dns/journal.c
    lib/dns/keytable.c
    lib/dns/lib.c
    lib/dns/log.c
    lib/dns/lookup.c
    lib/dns/master.c
    lib/dns/masterdump.c
    lib/dns/message.c
    lib/dns/name.c
    lib/dns/ncache.c
    lib/dns/nxt.c
    lib/dns/peer.c
    lib/dns/rbt.c
    lib/dns/rbtdb.c
    lib/dns/rbtdb.h
    lib/dns/rbtdb64.c
    lib/dns/rbtdb64.h
    lib/dns/rdata.c
    lib/dns/rdatalist.c
    lib/dns/rdatalist_p.h
    lib/dns/rdataset.c
    lib/dns/rdatasetiter.c
    lib/dns/rdataslab.c
    lib/dns/request.c
    lib/dns/resolver.c
    lib/dns/result.c
    lib/dns/rootns.c
    lib/dns/sdb.c
    lib/dns/soa.c
    lib/dns/ssu.c
    lib/dns/stats.c
    lib/dns/tcpmsg.c
    lib/dns/time.c
    lib/dns/timer.c
    lib/dns/tkey.c
    lib/dns/tsig.c
    lib/dns/ttl.c
    lib/dns/validator.c
    lib/dns/version.c
    lib/dns/view.c
    lib/dns/xfrin.c
    lib/dns/zone.c
    lib/dns/zonekey.c
    lib/dns/zt.c
    lib/isc/include/isc/app.h
    lib/isc/include/isc/assertions.h
    lib/isc/include/isc/base64.h
    lib/isc/include/isc/bitstring.h
    lib/isc/include/isc/boolean.h
    lib/isc/include/isc/buffer.h
    lib/isc/include/isc/bufferlist.h
    lib/isc/include/isc/commandline.h
    lib/isc/include/isc/entropy.h
    lib/isc/include/isc/error.h
    lib/isc/include/isc/event.h
    lib/isc/include/isc/eventclass.h
    lib/isc/include/isc/file.h
    lib/isc/include/isc/formatcheck.h
    lib/isc/include/isc/fsaccess.h
    lib/isc/include/isc/hash.h
    lib/isc/include/isc/heap.h
    lib/isc/include/isc/hex.h
    lib/isc/include/isc/hmacmd5.h
    lib/isc/include/isc/interfaceiter.h
    lib/isc/include/isc/ipv6.h
    lib/isc/include/isc/lang.h
    lib/isc/include/isc/lex.h
    lib/isc/include/isc/lfsr.h
    lib/isc/include/isc/lib.h
    lib/isc/include/isc/list.h
    lib/isc/include/isc/log.h
    lib/isc/include/isc/magic.h
    lib/isc/include/isc/md5.h
    lib/isc/include/isc/mem.h
    lib/isc/include/isc/msgcat.h
    lib/isc/include/isc/msgs.h
    lib/isc/include/isc/mutexblock.h
    lib/isc/include/isc/netaddr.h
    lib/isc/include/isc/ondestroy.h
    lib/isc/include/isc/os.h
    lib/isc/include/isc/platform.h
    lib/isc/include/isc/print.h
    lib/isc/include/isc/quota.h
    lib/isc/include/isc/random.h
    lib/isc/include/isc/ratelimiter.h
    lib/isc/include/isc/refcount.h
    lib/isc/include/isc/region.h
    lib/isc/include/isc/resource.h
    lib/isc/include/isc/result.h
    lib/isc/include/isc/resultclass.h
    lib/isc/include/isc/rwlock.h
    lib/isc/include/isc/serial.h
    lib/isc/include/isc/sha1.h
    lib/isc/include/isc/sockaddr.h
    lib/isc/include/isc/socket.h
    lib/isc/include/isc/stdio.h
    lib/isc/include/isc/string.h
    lib/isc/include/isc/symtab.h
    lib/isc/include/isc/task.h
    lib/isc/include/isc/taskpool.h
    lib/isc/include/isc/timer.h
    lib/isc/include/isc/types.h
    lib/isc/include/isc/util.h
    lib/isc/nls/msgcat.c
    lib/isc/nothreads/include/isc/condition.h
    lib/isc/nothreads/include/isc/mutex.h
    lib/isc/nothreads/include/isc/once.h
    lib/isc/nothreads/include/isc/thread.h
    lib/isc/nothreads/condition.c
    lib/isc/nothreads/mutex.c
    lib/isc/nothreads/thread.c
    lib/isc/pthreads/include/isc/condition.h
    lib/isc/pthreads/include/isc/mutex.h
    lib/isc/pthreads/include/isc/once.h
    lib/isc/pthreads/include/isc/thread.h
    lib/isc/pthreads/condition.c
    lib/isc/pthreads/mutex.c
    lib/isc/pthreads/thread.c
    lib/isc/unix/include/isc/dir.h
    lib/isc/unix/include/isc/int.h
    lib/isc/unix/include/isc/keyboard.h
    lib/isc/unix/include/isc/net.h
    lib/isc/unix/include/isc/netdb.h
    lib/isc/unix/include/isc/offset.h
    lib/isc/unix/include/isc/stat.h
    lib/isc/unix/include/isc/stdtime.h
    lib/isc/unix/include/isc/strerror.h
    lib/isc/unix/include/isc/syslog.h
    lib/isc/unix/include/isc/time.h
    lib/isc/unix/app.c
    lib/isc/unix/dir.c
    lib/isc/unix/entropy.c
    lib/isc/unix/errno2result.c
    lib/isc/unix/errno2result.h
    lib/isc/unix/file.c
    lib/isc/unix/fsaccess.c
    lib/isc/unix/ifiter_ioctl.c
    lib/isc/unix/ifiter_sysctl.c
    lib/isc/unix/interfaceiter.c
    lib/isc/unix/ipv6.c
    lib/isc/unix/keyboard.c
    lib/isc/unix/net.c
    lib/isc/unix/os.c
    lib/isc/unix/resource.c
    lib/isc/unix/socket.c
    lib/isc/unix/socket_p.h
    lib/isc/unix/stdio.c
    lib/isc/unix/stdtime.c
    lib/isc/unix/strerror.c
    lib/isc/unix/syslog.c
    lib/isc/unix/time.c
    lib/isc/win32/include/isc/bind_registry.h
    lib/isc/win32/include/isc/bindevt.h
    lib/isc/win32/include/isc/condition.h
    lib/isc/win32/include/isc/dir.h
    lib/isc/win32/include/isc/int.h
    lib/isc/win32/include/isc/ipv6.h
    lib/isc/win32/include/isc/keyboard.h
    lib/isc/win32/include/isc/mutex.h
    lib/isc/win32/include/isc/net.h
    lib/isc/win32/include/isc/netdb.h
    lib/isc/win32/include/isc/ntfile.h
    lib/isc/win32/include/isc/ntpaths.h
    lib/isc/win32/include/isc/offset.h
    lib/isc/win32/include/isc/once.h
    lib/isc/win32/include/isc/platform.h
    lib/isc/win32/include/isc/stat.h
    lib/isc/win32/include/isc/stdtime.h
    lib/isc/win32/include/isc/strerror.h
    lib/isc/win32/include/isc/syslog.h
    lib/isc/win32/include/isc/thread.h
    lib/isc/win32/include/isc/time.h
    lib/isc/win32/include/isc/win32os.h
    lib/isc/win32/app.c
    lib/isc/win32/condition.c
    lib/isc/win32/dir.c
    lib/isc/win32/DLLMain.c
    lib/isc/win32/entropy.c
    lib/isc/win32/errno2result.c
    lib/isc/win32/errno2result.h
    lib/isc/win32/file.c
    lib/isc/win32/fsaccess.c
    lib/isc/win32/interfaceiter.c
    lib/isc/win32/ipv6.c
    lib/isc/win32/keyboard.c
    lib/isc/win32/net.c
    lib/isc/win32/netdb.h
    lib/isc/win32/ntfile.c
    lib/isc/win32/ntpaths.c
    lib/isc/win32/once.c
    lib/isc/win32/os.c
    lib/isc/win32/resource.c
    lib/isc/win32/socket.c
    lib/isc/win32/stdio.c
    lib/isc/win32/stdtime.c
    lib/isc/win32/strerror.c
    lib/isc/win32/syslog.c
    lib/isc/win32/syslog.h
    lib/isc/win32/thread.c
    lib/isc/win32/time.c
    lib/isc/win32/unistd.h
    lib/isc/win32/version.c
    lib/isc/win32/win32os.c
    lib/isc/assertions.c
    lib/isc/base64.c
    lib/isc/bitstring.c
    lib/isc/buffer.c
    lib/isc/bufferlist.c
    lib/isc/commandline.c
    lib/isc/entropy.c
    lib/isc/error.c
    lib/isc/event.c
    lib/isc/fsaccess.c
    lib/isc/hash.c
    lib/isc/heap.c
    lib/isc/hex.c
    lib/isc/hmacmd5.c
    lib/isc/inet_aton.c
    lib/isc/inet_ntop.c
    lib/isc/inet_pton.c
    lib/isc/lex.c
    lib/isc/lfsr.c
    lib/isc/lib.c
    lib/isc/log.c
    lib/isc/md5.c
    lib/isc/mem.c
    lib/isc/mutexblock.c
    lib/isc/netaddr.c
    lib/isc/ondestroy.c
    lib/isc/print.c
    lib/isc/quota.c
    lib/isc/random.c
    lib/isc/ratelimiter.c
    lib/isc/result.c
    lib/isc/rwlock.c
    lib/isc/serial.c
    lib/isc/sha1.c
    lib/isc/sockaddr.c
    lib/isc/string.c
    lib/isc/symtab.c
    lib/isc/task.c
    lib/isc/task_p.h
    lib/isc/taskpool.c
    lib/isc/timer.c
    lib/isc/timer_p.h
    lib/isc/version.c
    lib/isccc/include/isccc/alist.h
    lib/isccc/include/isccc/base64.h
    lib/isccc/include/isccc/cc.h
    lib/isccc/include/isccc/ccmsg.h
    lib/isccc/include/isccc/events.h
    lib/isccc/include/isccc/lib.h
    lib/isccc/include/isccc/result.h
    lib/isccc/include/isccc/sexpr.h
    lib/isccc/include/isccc/symtab.h
    lib/isccc/include/isccc/symtype.h
    lib/isccc/include/isccc/types.h
    lib/isccc/include/isccc/util.h
    lib/isccc/win32/DLLMain.c
    lib/isccc/win32/version.c
    lib/isccc/alist.c
    lib/isccc/base64.c
    lib/isccc/cc.c
    lib/isccc/ccmsg.c
    lib/isccc/lib.c
    lib/isccc/result.c
    lib/isccc/sexpr.c
    lib/isccc/symtab.c
    lib/isccc/version.c
    lib/isccfg/include/isccfg/cfg.h
    lib/isccfg/include/isccfg/check.h
    lib/isccfg/include/isccfg/log.h
    lib/isccfg/win32/DLLMain.c
    lib/isccfg/win32/version.c
    lib/isccfg/check.c
    lib/isccfg/log.c
    lib/isccfg/parser.c
    lib/isccfg/version.c
    lib/lwres/include/lwres/context.h
    lib/lwres/include/lwres/int.h
    lib/lwres/include/lwres/ipv6.h
    lib/lwres/include/lwres/lang.h
    lib/lwres/include/lwres/list.h
    lib/lwres/include/lwres/lwbuffer.h
    lib/lwres/include/lwres/lwpacket.h
    lib/lwres/include/lwres/lwres.h
    lib/lwres/include/lwres/netdb.h
    lib/lwres/include/lwres/platform.h
    lib/lwres/include/lwres/result.h
    lib/lwres/unix/include/lwres/net.h
    lib/lwres/win32/include/lwres/int.h
    lib/lwres/win32/include/lwres/net.h
    lib/lwres/win32/include/lwres/netdb.h
    lib/lwres/win32/include/lwres/platform.h
    lib/lwres/win32/DLLMain.c
    lib/lwres/win32/version.c
    lib/lwres/assert_p.h
    lib/lwres/context.c
    lib/lwres/context_p.h
    lib/lwres/gai_strerror.c
    lib/lwres/getaddrinfo.c
    lib/lwres/gethost.c
    lib/lwres/getipnode.c
    lib/lwres/getnameinfo.c
    lib/lwres/getrrset.c
    lib/lwres/herror.c
    lib/lwres/lwbuffer.c
    lib/lwres/lwconfig.c
    lib/lwres/lwinetaton.c
    lib/lwres/lwinetntop.c
    lib/lwres/lwinetpton.c
    lib/lwres/lwpacket.c
    lib/lwres/lwres_gabn.c
    lib/lwres/lwres_gnba.c
    lib/lwres/lwres_grbn.c
    lib/lwres/lwres_noop.c
    lib/lwres/lwresutil.c
    lib/lwres/version.c
    lib/tests/include/tests/t_api.h
    lib/tests/t_api.c
    lib/win32/bindevt/bindevt.c
    acconfig.h
    config.h)

add_executable(bind_9_2_3 ${SOURCE_FILES})